// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`decorator aliases ArrayField should define the field correctly 1`] = `
"type Bar {
  foo2: String!
  foo(a: String): [String!]!
  foo3: [Float!]!
}

type Mutation {
  output: Bar
}

type Query {
  output: Bar
}
"
`;

exports[`decorator aliases should compile 1`] = `
"type Bar {
  foo(a: String): String
}

input BarInput {
  foo2: String
  foo: String
}

type Mutation {
  output: Bar
  echo(input: BarInput!): Bar
}

type Query {
  output: Bar
  echo(input: BarInput!): Bar
}
"
`;
